# ufw

./: .clang-format  .clang-tidy  .dir-locals.el  .gcovr.conf  .gitignore  AUTHORS  CHANGES  CMakeLists.txt  HACKING  LICENCE  Makefile  README  bit-operations.h  compiler.h  module.yaml
c/: CMakeLists.txt  ring-buffer-iter.c  ring-buffer-iter.h
c++/: CMakeLists.txt  RingBuffer.h  Setting.h  Validator.h
cmake/: README.toolchains
cmake/kconfig/: README  debug.conf  minsizerel.conf  release.conf  relwithdebinfo.conf
cmake/modules/: AddNanoPB.cmake  ArmCmsis.cmake  BuildArtifacts.cmake  BuildInTargetDir.cmake  BuildInZephyrDir.cmake  DetectMonolith.cmake  FakeTimeSupport.cmake  FreeRTOS.cmake  GNUAttributes.cmake  GNUBuiltins.cmake  GNUCompilerWarnings.cmake  GenerateGraphics.cmake  GitIntegration.cmake  HardwareAbstraction.cmake  InitialiseToolchain.cmake  Libtap.cmake  Newlib.cmake  STCmsis.cmake  STM32HAL.cmake  STM32HAL_f0.cmake  STM32HAL_f1.cmake  STM32HAL_f2.cmake  STM32HAL_f3.cmake  STM32HAL_f4.cmake  STM32HAL_f7.cmake  STM32HAL_g0.cmake  STM32HAL_g4.cmake  STM32HAL_h7.cmake  STM32HAL_l0.cmake  STM32HAL_l1.cmake  STM32HAL_l4.cmake  STM32HAL_l5.cmake  STM32HAL_wb.cmake  SetupUFW.cmake  (+8 more)
common/: compiler.h  config.h.in  toolchain.h.in
config/: compiler-test
doc/: CMakeLists.txt  Doxyfile.in  cmake.md  custom-target.md  doxy-layout.xml  doxy-mainpage.md  fuzzing.txt  regp.txt  tap.md  ufw-doxy.css  zephyr.md
doc/doxygen/custom/: custom.css  header.html
doc/examples/xilinx-ise/: target.cmake
doc/examples/xilinx-ise/cmd/: bitgen_command_file.cmd  impact_program_jtag.cmd.in  map_command_file.cmd  ngd_command_file.cmd  par_command_file.cmd  twr_command_file.cmd
doc/examples/xilinx-ise/tcl/: process_properties.tcl  project_properties.tcl
doc/examples/xilinx-ise/xst/: synthesis_script.xst.in
doc/pages/: cmake.md  custom-target.md  devel.md  maintainer.md  tap.md  vcs.md  zephyr.md
examples/: CMakeLists.txt  ex-regp-parse-frame.c  ex-rfc1055-parse-frame.c  ex-versioned-persistence.c
fuzz/: afl++.yaml  run
src/: allocator.c  byte-buffer.c  crc-16-arc.c  hexdump.c  length-prefix.c  octet-buffer.c  octet-ring.c  persistent-storage.c  register-internal.h  register-protocol.c  register-table.c  register-utilities.c  rfc1055.c  ring-buffer-iter.c  source-sink.c  sx.c  variable-length-integer.c  versioned-persistence.c
src/z/: CMakeLists.txt  driver-i2c-text.c  driver-spi-text.c  endpoint-uart-fifo.c  endpoint-uart-poll.c  shell-addons.c  slab-allocator.c
test/: .gitignore  CMakeLists.txt  Makefile  RangeValidator.cpp  TrivialValidator.cpp  ring-buffer.c  run  t-binary-format.c  t-byte-buffer.c  t-convolution-low-pass.c  t-endpoints.c  t-ep-retry-ctrl.c  t-hexdump.c  t-length-prefix.c  t-persistent-storage.c  t-register-protocol.c  t-register-table-persistent-storage.c  t-register-table.c  t-rfc1055.c  t-ring-buffer.c  t-sx-parser.c  t-varint.c  t-versioned-persistence.c
test/module/: CMakeLists.txt  run  setup  system.yaml
test/module/src/: CMakeLists.txt  main.c  prj.conf
test/module/src/boards/: native_posix_64.conf  native_posix_64.overlay
test/vcs/data/: specimen-multi-mixed-g098d055-clean-default.state  specimen-multi-mixed-g098d055-clean-prefix.state  specimen-multi-mixed-g098d055-dirty-default.state  specimen-multi-mixed-g098d055-dirty-prefix.state  specimen-multi-mixed-g4c33abf-clean-default.state  specimen-multi-mixed-g4c33abf-clean-prefix.state  specimen-multi-mixed-g4c33abf-dirty-default.state  specimen-multi-mixed-g4c33abf-dirty-prefix.state  specimen-multi-mixed-gd1ba1bc-clean-default.state  specimen-multi-mixed-gd1ba1bc-clean-prefix.state  specimen-multi-mixed-gd1ba1bc-dirty-default.state  specimen-multi-mixed-gd1ba1bc-dirty-prefix.state  specimen-multi-mixed-ge21d10a-clean-default.state  specimen-multi-mixed-ge21d10a-dirty-prefix.state  specimen-multi-mixed-p100-clean-default.state  specimen-multi-mixed-p100-clean-prefix.state  specimen-multi-mixed-p100-dirty-default.state  specimen-multi-mixed-p100-dirty-prefix.state  specimen-multi-mixed-p200-clean-default.state  specimen-multi-mixed-p200-clean-prefix.state  specimen-multi-mixed-p200-dirty-default.state  specimen-multi-mixed-p200-dirty-prefix.state  specimen-multi-mixed-p300-clean-default.state  specimen-multi-mixed-p300-clean-prefix.state  specimen-multi-mixed-p300-dirty-default.state  specimen-multi-mixed-p300-dirty-prefix.state  specimen-multi-mixed-p310-clean-default.state  specimen-multi-mixed-p310-clean-prefix.state  specimen-multi-mixed-p310-dirty-default.state  specimen-multi-mixed-p310-dirty-prefix.state  specimen-multi-mixed-v100-clean-default.state  specimen-multi-mixed-v100-clean-prefix.state  specimen-multi-mixed-v100-dirty-default.state  specimen-multi-mixed-v100-dirty-prefix.state  specimen-multi-mixed-v1000-clean-default.state  specimen-multi-mixed-v1000-clean-prefix.state  specimen-multi-mixed-v1000-dirty-default.state  specimen-multi-mixed-v1000-dirty-prefix.state  specimen-multi-mixed-v200-clean-default.state  specimen-multi-mixed-v200-clean-prefix.state  (+16 more)
test/vcs/sh/: epilogue.sh  generate-states.sh  prologue.sh
test/vcs/t/: 0001-specimen-notags.t  0002-specimen-single-top-vtag.t  0003-specimen-single-nontop-vtag.t  0004-specimen-multi-mixed.t  0005-specimen-pre-release.t  0006-specimen-release-candidate.t  specimen-multi-mixed.t  specimen-notags.t  specimen-single-nontop-vtag.t  specimen-single-top-vtag.t
test/vcs/tools/: calculate-state
test/z/: CMakeLists.txt  README  run  setup
test/z/src/: CMakeLists.txt  main.c  prj.conf
test/z/src/boards/: native_posix_64.conf  native_posix_64.overlay
tools/: apidoc-build.sh  check-changes.sh  check-copyright.sh  check-meta-h.sh  clang-analyzer.sh  clang-tidy.sh  compat-build.sh  coverage-build.sh  generate-diffstat.sh  make-binary-format  make-binary-format.scm  make-register-macros  make-register-macros.scm  quick.yaml  release-tests.sh  run
vcs-integration/: build-information.sh  definitions.sh.example  git.sh  system-version.h.in  version.h.in
zephyr/: Kconfig  cmake-cache.cmake  module.yml  zephyr.cmake
(+110 files in other folders)
